# cb-mpc

demos-cpp/tdh2/: CMakeLists.txt  main.cpp
scripts/: run-demos.sh  setup-run-tdh2-demo.sh
scripts/openssl/: build-static-openssl-macos-m1.sh  build-static-openssl-macos.sh
